[gd_scene load_steps=33 format=2]

[ext_resource path="res://src/assets/kO/KO.gd" type="Script" id=1]
[ext_resource path="res://fonts/electrox.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://img/fx/splash_2.png" type="Texture" id=3]
[ext_resource path="res://img/fx/splash_1.png" type="Texture" id=4]
[ext_resource path="res://img/fx/go_splash_2.png" type="Texture" id=5]
[ext_resource path="res://img/fx/go_splash_1.png" type="Texture" id=6]
[ext_resource path="res://img/GUI/player_lifebar_HUD.png" type="Texture" id=7]

[sub_resource type="GDScript" id=28]
script/source = "extends MarginContainer


export(NodePath) onready var player_1 = get_node(player_1)
export(NodePath) onready var player_2 = get_node(player_2)


func _ready():
	player_1.self_modulate = Gameplay.gamedata.get_stick_data(Gameplay.player_1_id, Gameplay.gamedata.stick_info.COLORS )[ Gameplay.player_1_color]
	player_1.get_node(\"img\").texture = Gameplay.gamedata.get_stick_data(Gameplay.player_1_id, Gameplay.gamedata.stick_info.IMG)
	player_1.get_node(\"name\").text = Gameplay.gamedata.get_stick_data(Gameplay.player_1_id, Gameplay.gamedata.stick_info.NAME)
	
	player_2.self_modulate = Gameplay.gamedata.get_stick_data(Gameplay.player_2_id, Gameplay.gamedata.stick_info.COLORS )[ Gameplay.player_2_color]
	player_2.get_node(\"img\").texture = Gameplay.gamedata.get_stick_data(Gameplay.player_2_id, Gameplay.gamedata.stick_info.IMG)
	player_2.get_node(\"name\").text = Gameplay.gamedata.get_stick_data(Gameplay.player_2_id, Gameplay.gamedata.stick_info.NAME)
	
	yield(get_tree().create_timer(Gameplay.CUTSCENE_TIME), \"timeout\")
	visible = true

"

[sub_resource type="DynamicFont" id=29]
size = 26
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.129412, 0.129412, 0.129412, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.34902, 0.105882, 0.105882, 1 )

[sub_resource type="GDScript" id=12]
script/source = "extends ProgressBar




func _process(delta):
	value = lerp(value, 100 - Gameplay.player_1.life, 0.1)
"

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.129412, 0.129412, 0.129412, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.109804, 0.313726, 0.415686, 1 )

[sub_resource type="GDScript" id=15]
script/source = "extends ProgressBar



func _process(delta):
	value = lerp(value, 100 - (Gameplay.player_1.posture * 4), 0.1)
"

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.34902, 0.105882, 0.105882, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.129412, 0.129412, 0.129412, 1 )

[sub_resource type="GDScript" id=13]
script/source = "extends ProgressBar




func _process(delta):
	value = lerp(value, Gameplay.player_2.life, 0.1)
"

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.109804, 0.313726, 0.415686, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.129412, 0.129412, 0.129412, 1 )

[sub_resource type="GDScript" id=14]
script/source = "extends ProgressBar



func _process(delta):
	value = lerp(value,Gameplay.player_2.posture * 4, 0.1)
"

[sub_resource type="Shader" id=18]
code = "shader_type canvas_item;


void fragment(){
	vec2 _uv = vec2(0.0, 0.0);
	_uv.x = cos((TIME * 5.0) + (UV.y * 20.0)) * 0.01;
	
	COLOR = texture(TEXTURE, UV + (_uv * 0.1));
}"

[sub_resource type="ShaderMaterial" id=19]
shader = SubResource( 18 )

[sub_resource type="Shader" id=20]
code = "shader_type canvas_item;


void fragment(){
	vec2 _uv = vec2(0.0, 0.0);
	_uv.x = cos((TIME * 5.0) + (UV.y * 20.0)) * 0.01;
	
	COLOR = texture(TEXTURE, UV + (_uv * 0.1));
}"

[sub_resource type="ShaderMaterial" id=21]
shader = SubResource( 20 )

[sub_resource type="DynamicFont" id=17]
size = 200
outline_size = 9
outline_color = Color( 0.494118, 0.0823529, 0.0823529, 1 )
font_data = ExtResource( 2 )

[sub_resource type="GDScript" id=22]
script/source = "extends ColorRect



onready var tween = $Tween


func _ready():
	yield(self, \"ready\")
	tween.interpolate_property(self, \"color\", Color.black, Color(0, 0, 0, 0), 1.0)
	tween.start()
"

[sub_resource type="GDScript" id=23]
script/source = "extends Control

onready var tween = $Tween
onready var label = $go_text
onready var splash_1 = $splash_1
onready var splash_2 = $splash_2


func _ready():
	yield(get_tree().create_timer(Gameplay.CUTSCENE_TIME - 1.0), \"timeout\")
	tween.interpolate_property(label, \"self_modulate\", Color(1, 1, 1, 0), Color(1, 1, 1, 1), 0.15)
	tween.interpolate_property(splash_1, \"rect_position\", Vector2(1300, 360), Vector2(0, 360), 0.15, Tween.TRANS_QUAD, Tween.EASE_OUT)
	tween.interpolate_property(splash_2, \"rect_position\", Vector2(-1300, 160), Vector2(0, 160), 0.15, Tween.TRANS_QUAD, Tween.EASE_OUT)
	tween.start()
	
	yield(tween, \"tween_all_completed\")
	tween.interpolate_property(splash_1, \"rect_position\", Vector2(0, 360), Vector2(-50, 360), 0.6)
	tween.interpolate_property(splash_2, \"rect_position\", Vector2(0, 160), Vector2(50, 160), 0.6)
	tween.start()
	
	yield(tween, \"tween_all_completed\")
	tween.interpolate_property(label, \"rect_position\", Vector2(491, 263), Vector2(491, -300), 0.15, Tween.TRANS_CIRC)
	tween.interpolate_property(splash_1, \"rect_position\", Vector2(-50, 360), Vector2(-1300, 360), 0.15, Tween.TRANS_QUAD, Tween.EASE_OUT)
	tween.interpolate_property(splash_2, \"rect_position\", Vector2(50, 160), Vector2(1300, 160), 0.15, Tween.TRANS_QUAD, Tween.EASE_OUT)
	tween.start()
	
	yield(tween, \"tween_all_completed\")
	queue_free()
"

[sub_resource type="Shader" id=24]
code = "shader_type canvas_item;


void fragment(){
	vec2 _uv = vec2(0.0, 0.0);
	_uv.y = cos((TIME * 10.0) + (UV.x * 50.0)) * 0.02;
	
	COLOR = texture(TEXTURE, UV + (_uv * 0.2));
}"

[sub_resource type="ShaderMaterial" id=25]
shader = SubResource( 24 )

[sub_resource type="Shader" id=26]
code = "shader_type canvas_item;


void fragment(){
	vec2 _uv = vec2(0.0, 0.0);
	_uv.y = cos((TIME * 10.0) + (UV.x * 50.0)) * 0.02;
	
	COLOR = texture(TEXTURE, UV + (_uv * 0.2));
}"

[sub_resource type="ShaderMaterial" id=27]
shader = SubResource( 26 )

[node name="GUI" type="CanvasLayer"]

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 5
script = SubResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}
player_1 = NodePath("HUD/top/left/player_1")
player_2 = NodePath("HUD/top/rigth/Node2D/player_2")

[node name="HUD" type="Control" parent="MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 1265.0
margin_bottom = 715.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top" type="HBoxContainer" parent="MarginContainer/HUD"]
anchor_right = 1.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" type="Control" parent="MarginContainer/HUD/top"]
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )

[node name="player_1" type="TextureRect" parent="MarginContainer/HUD/top/left"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = -20.0
margin_right = 200.0
margin_bottom = 37.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="img" type="TextureRect" parent="MarginContainer/HUD/top/left/player_1"]
margin_left = 2.0
margin_top = 2.0
margin_right = 55.0
margin_bottom = 55.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="MarginContainer/HUD/top/left/player_1"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 59.0
margin_top = -22.0
margin_right = 459.0
margin_bottom = 3.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 29 )
text = "Ronaldinho Soccer"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bars" type="MarginContainer" parent="MarginContainer/HUD/top"]
margin_left = 104.0
margin_right = 1146.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HUD/top/bars"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1037.0
margin_bottom = 35.0
custom_constants/separation = 5
alignment = 1

[node name="left_bars" type="VBoxContainer" parent="MarginContainer/HUD/top/bars/HBoxContainer"]
margin_right = 513.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="life_bar" type="ProgressBar" parent="MarginContainer/HUD/top/bars/HBoxContainer/left_bars"]
margin_right = 513.0
margin_bottom = 12.0
size_flags_vertical = 3
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
value = 95.0
percent_visible = false
script = SubResource( 12 )

[node name="posture_bar" type="ProgressBar" parent="MarginContainer/HUD/top/bars/HBoxContainer/left_bars"]
margin_top = 17.0
margin_right = 513.0
margin_bottom = 30.0
size_flags_vertical = 3
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
value = 95.0
percent_visible = false
script = SubResource( 15 )

[node name="rigth_bars" type="VBoxContainer" parent="MarginContainer/HUD/top/bars/HBoxContainer"]
margin_left = 518.0
margin_right = 1032.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="life_bar" type="ProgressBar" parent="MarginContainer/HUD/top/bars/HBoxContainer/rigth_bars"]
margin_right = 514.0
margin_bottom = 13.0
size_flags_vertical = 3
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
value = 5.0
percent_visible = false
script = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="posture_bar" type="ProgressBar" parent="MarginContainer/HUD/top/bars/HBoxContainer/rigth_bars"]
margin_top = 17.0
margin_right = 514.0
margin_bottom = 30.0
size_flags_vertical = 3
custom_styles/fg = SubResource( 10 )
custom_styles/bg = SubResource( 11 )
value = 5.0
percent_visible = false
script = SubResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rigth" type="Control" parent="MarginContainer/HUD/top"]
margin_left = 1150.0
margin_right = 1250.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )

[node name="Node2D" type="Node2D" parent="MarginContainer/HUD/top/rigth"]
z_index = -1

[node name="player_2" type="TextureRect" parent="MarginContainer/HUD/top/rigth/Node2D"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_right = 50.0
margin_bottom = 57.0
texture = ExtResource( 7 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="img" type="TextureRect" parent="MarginContainer/HUD/top/rigth/Node2D/player_2"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -55.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = 55.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="MarginContainer/HUD/top/rigth/Node2D/player_2"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -259.0
margin_top = -22.0
margin_right = 141.0
margin_bottom = 3.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 29 )
text = "Ronaldinho Soccer Ronaldinho Socc"
align = 2
uppercase = true

[node name="center" type="Control" parent="MarginContainer/HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KO" type="Control" parent="MarginContainer/HUD/center"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flash" type="ColorRect" parent="MarginContainer/HUD/center/KO"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -800.0
margin_top = -450.0
margin_right = 800.0
margin_bottom = 450.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="splash_1" type="TextureRect" parent="MarginContainer/HUD/center/KO"]
visible = false
material = SubResource( 19 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -1493.56
margin_top = -294.321
margin_right = -679.56
margin_bottom = 10.6787
rect_rotation = -90.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="splash_2" type="TextureRect" parent="MarginContainer/HUD/center/KO"]
visible = false
material = SubResource( 21 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = 730.284
margin_top = 50.724
margin_right = 1544.28
margin_bottom = 355.724
rect_rotation = -90.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ko_text" type="RichTextLabel" parent="MarginContainer/HUD/center/KO"]
visible = false
self_modulate = Color( 20, 20, 20, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -191.0
margin_top = -102.0
margin_right = 191.0
margin_bottom = 102.0
custom_colors/default_color = Color( 0.909804, 0.992157, 1, 1 )
custom_fonts/normal_font = SubResource( 17 )
bbcode_enabled = true
bbcode_text = " [shake rate=30 level=20]K.O.[/shake]"
text = " K.O."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="MarginContainer/HUD/center/KO"]

[node name="fade_out" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
script = SubResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="fade_out"]

[node name="GO" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = SubResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="go_text" type="RichTextLabel" parent="GO"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 471.0
margin_top = 243.0
margin_right = 769.0
margin_bottom = 437.0
mouse_filter = 2
custom_colors/default_color = Color( 0.909804, 0.992157, 1, 1 )
custom_fonts/normal_font = SubResource( 17 )
bbcode_enabled = true
bbcode_text = "[wave amp=30 freq=2]GO![/wave]"
text = "GO!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="splash_1" type="TextureRect" parent="GO"]
material = SubResource( 25 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 1280.0
margin_top = 340.0
margin_right = 2560.0
margin_bottom = 540.0
mouse_filter = 2
texture = ExtResource( 6 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="splash_2" type="TextureRect" parent="GO"]
material = SubResource( 27 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1320.0
margin_top = 140.0
margin_right = -40.0
margin_bottom = 340.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="Tween" type="Tween" parent="GO"]
